oxiplate-derive/tests/broken/operators/without-expression-after.stderr
error: Expected an expression
 --> tests/broken/operators/without-expression-after.rs:4:27
  |
4 | #[oxiplate_inline("{{ a + }}")]
  |                           ^^
